--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+*{
+  background-color:#0a2a4d;
+  margin: 0;
+  padding: 0;
+  line-height: 1.4rem;
+  font-family: 'Noto Sans JP', sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+a:hover{
+  color:white
+}
 .App {
   text-align: center;
 }
@@ -5,34 +21,4 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
