change-bg-color

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 *{
-  background-color:#0a2a4d;
+  /* background-color:#0a2a4d; */
   margin: 0;
   padding: 0;
   line-height: 1.4rem;
